# ECIP-lite

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ECIP_Implementation_Summary.md  LICENSE  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SUPPORT.md  demo_cache.py  demo_config.py  demo_diagnostics.py  demo_logging.py  demo_metrics.py  demo_routing.py  demo_workspace.py  pyproject.toml  requirements.txt  run_api.py
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: ecip.db
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  RELEASE_CHECKLIST.md  USER_GUIDE.md
docs/maintenance/: PATCH_RELEASE_CHECKLIST.md
ecip_core/: logger.py  main.py  settings.py
ecip_core/api/: __init__.py  main.py
ecip_core/cache/: __init__.py  manager.py
ecip_core/chunking/: code_chunk.py  java_chunker.py
ecip_core/citations/: __init__.py  citation_engine.py
ecip_core/common/: logger.py
ecip_core/config/: domains.py  (+2 more)
scripts/: run_release_validation.py  verify_docs.py
tests/: test_api.py  test_cache.py  test_chunker.py  test_citation_engine.py  test_configuration.py  test_context_builder.py  test_dependency_builder.py  test_dependency_service.py  test_diagnostics.py  test_embedding.py  test_entity_extractor.py  test_faiss_store.py  test_graph_provider.py  test_hybrid_retrieval.py  test_impact_analysis.py  test_index_builder.py  test_inference_service.py  test_intent_analyzer.py  test_logging.py  test_metadata_service.py  test_metrics.py  test_neo4j_provider.py  test_parser.py  test_project_api.py  test_project_parser.py  test_prompt_builder.py  test_query_coordinator.py  test_repository.py  test_response_formatter.py  test_semantic_search.py  test_streaming.py  test_workspace.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+102 files in other folders)
