[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ecip-lite"
version = "1.0.0"
description = "ECIP Lite — Offline, privacy-first AI code intelligence for Java/Spring Boot"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Samir Zade", email = "samir@ecip-lite.dev"}
]
keywords = ["java", "code-intelligence", "llm", "ollama", "rag", "faiss", "spring-boot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "javalang==0.13.0",
    "faiss-cpu==1.14.3",
    "numpy==2.5.0",
    "ollama==0.6.2",
    "httpx==0.28.1",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "click==8.4.2",
    "neo4j==5.22.0",
]

[project.urls]
Homepage = "https://github.com/Zade-Samir/ECIP-lite"
Repository = "https://github.com/Zade-Samir/ECIP-lite.git"
"Bug Tracker" = "https://github.com/Zade-Samir/ECIP-lite/issues"
Changelog = "https://github.com/Zade-Samir/ECIP-lite/blob/main/CHANGELOG.md"

[project.scripts]
ecip = "ecip_core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecip_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
